--- a/_posts/Java/MySql/2020-07-12-14.md
+++ b/_posts/Java/MySql/2020-07-12-14.md
@@ -17,11 +17,11 @@ excerpt:  MySQL安装图解
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/27.png)
 
-** 有三个按钮： **
+有三个按钮：
 
 第一个按钮表示典型安装（推荐的安装）
 
-*** 第二个按钮表示自定义安装（一般使用这种方法） ***
+第二个按钮表示自定义安装（一般使用这种方法）
 
 第三个按钮表示完全安装（一般不需要）
 
@@ -36,7 +36,7 @@ excerpt:  MySQL安装图解
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/31.png)
 
-** 这页中的第一个图片中的复选框一定要选中 **
+这页中的第一个图片中的复选框一定要选中
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/32.png)
 
@@ -44,27 +44,27 @@ excerpt:  MySQL安装图解
 
 右边的图片
 
-* 上面出现了单选框：一般使用上面那个（精细配置） *
+上面出现了单选框：一般使用上面那个（精细配置）
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/34.png)
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/35.png)
 
-* 使用第一个 开发者电脑 *
+使用第一个 开发者电脑
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/36.png)
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/37.png)
 
-** 右边图片上，可以选择mysql连接数（连接上限） **
+右边图片上，可以选择mysql连接数（连接上限）
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/38.png)
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/39.png)
 
-** mysql默认端口是 3306 **
+mysql默认端口是 3306
 
-** 右边图片： **
+右边图片：
 
 可以选择数据库的支持的编码方式
 
@@ -74,11 +74,11 @@ excerpt:  MySQL安装图解
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/41.png)
 
-** 左边的图片 **
+左边的图片
 
 两个复选框都要选中
 
-** 右边的图片 **
+右边的图片
 
 - mysql中 超级管理员 root
 - 设置root的密码（一定要记住）
@@ -87,7 +87,7 @@ excerpt:  MySQL安装图解
 
 ![](http://www.nangongyibin.com/assets/images/Java/MySql/43.png)
 
-** 当出现了右边情况，没有X的情况，表示mysql安装成功。 **
+当出现了右边情况，没有X的情况，表示mysql安装成功。
 
 如果出现X，没有安装成功，必须要重新安装。
 
@@ -97,13 +97,13 @@ excerpt:  MySQL安装图解
 
 校验
 
-** 首先要启动mysql的服务（默认就是启动的） **
+首先要启动mysql的服务（默认就是启动的）
 
 1　安装MySQL
 
 2　校验MySQL
 
-** 打开cmd窗口 **
+打开cmd窗口
 
 mysql -uroot -p123
 
