--- a/_posts/Java/Java/2020-07-12-43.md
+++ b/_posts/Java/Java/2020-07-12-43.md
@@ -6,6 +6,23 @@ tags: [Java]
 excerpt:  单例模式
 ---
 
+
+## 单例设计模式特点: 在内存中只有一个实例存在.  ##
+
+## 单例设计模式概述  ##
+
+单例模式就是要确保类在内存中只有一个对象，该实例必须自动创建，并且对外提供。 
+
+## 优点  ##
+
+在系统内存中只存在一个对象，因此可以节约系统资源，对于一些需要频繁创建和销毁的对象单例模式无疑可以提高系统的性能。 
+
+## 缺点  ##
+
+- 没有抽象层，因此扩展很难。 
+- 职责过重，在一定程序上违背了单一职责
+
+
 ### 第一种 懒汉式,线程不安全,无法在多线程工作 ###
 
 	/**
