更新依赖的链接。

--- a/_posts/Linux/2019-08-09-6.md
+++ b/_posts/Linux/2019-08-09-6.md
@@ -216,6 +216,6 @@ excerpt: nginx启动错误
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/zyhlearnjava/article/details/71908529>
-2. <https://blog.csdn.net/baidu_37895884/article/details/78218322>
-3. <https://www.cnblogs.com/taui/p/6197045.html>
+1. [centOS7访问nginx失败解决](https://blog.csdn.net/zyhlearnjava/article/details/71908529 "centOS7访问nginx失败解决")
+2. [添加nginx为系统服务](https://blog.csdn.net/baidu_37895884/article/details/78218322 "添加nginx为系统服务")
+3. [Failed to start SYSV](https://www.cnblogs.com/taui/p/6197045.html "Failed to start SYSV")
