--- a/_posts/C/C/2019-09-09-7.md
+++ b/_posts/C/C/2019-09-09-7.md
@@ -31,4 +31,4 @@ excerpt: 在vs2010运行c程序时，控制台一闪而过怎么解决
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/scorpio_tester/article/details/41889531>
+1. [在vs2010运行c程序时，控制台一闪而过怎么解决](https://blog.csdn.net/scorpio_tester/article/details/41889531 "在vs2010运行c程序时，控制台一闪而过怎么解决")
