--- a/_posts/Linux/2019-08-09-7.md
+++ b/_posts/Linux/2019-08-09-7.md
@@ -30,4 +30,4 @@ excerpt: nginx安装错误
 
 **[参考文献]**
 
-1. <https://www.jianshu.com/p/9227f0d3d005>
+1. [centos安装nginx 报错](https://www.jianshu.com/p/9227f0d3d005 "centos安装nginx 报错")
