--- a/_posts/Linux/2019-08-09-9.md
+++ b/_posts/Linux/2019-08-09-9.md
@@ -19,4 +19,4 @@ excerpt: npm指定安装路径
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/friendan/article/details/50830671/>
+1. [设置npm安装程序时的默认目录](https://blog.csdn.net/friendan/article/details/50830671/ "设置npm安装程序时的默认目录")
