--- a/_posts/Linux/2019-08-15-20.md
+++ b/_posts/Linux/2019-08-15-20.md
@@ -37,4 +37,4 @@ excerpt: Centos7网络设置
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/u014711094/article/details/79832259>
+1. [centos7网络设置，连接以太网/wifi](https://blog.csdn.net/u014711094/article/details/79832259 "centos7网络设置，连接以太网/wifi")
