--- a/_posts/Linux/2019-08-15-30.md
+++ b/_posts/Linux/2019-08-15-30.md
@@ -199,6 +199,6 @@ Linux直接Mysql数据库
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/a1173537204/article/details/88069724>
-2. <https://blog.csdn.net/Hello_World_QWP/article/details/80346904>
-3. <https://blog.csdn.net/vv19910825/article/details/82979563>
+1. [解决ERROR 2002](https://blog.csdn.net/a1173537204/article/details/88069724 "解决ERROR 2002")
+2. [ERROR 1045](https://blog.csdn.net/Hello_World_QWP/article/details/80346904 "ERROR 1045")
+3. [重置密码遇到ERROR 1045](https://blog.csdn.net/vv19910825/article/details/82979563 "重置密码遇到ERROR 1045")
