--- a/_posts/Linux/2019-08-30-32.md
+++ b/_posts/Linux/2019-08-30-32.md
@@ -97,4 +97,4 @@ excerpt: mysql的主从复制配置
 
 **[参考文献]**
 
-1. <https://blog.51cto.com/superpcm/2094958>
+1. [MySQL的主从复制介绍及配置](https://blog.51cto.com/superpcm/2094958 "MySQL的主从复制介绍及配置")
