--- a/_posts/Linux/2019-08-31-33.md
+++ b/_posts/Linux/2019-08-31-33.md
@@ -25,7 +25,7 @@ excerpt: Redis几种数据导出导入方式
 	Error fetching http://ruby.taobao.org:
 	    bad response Not Found 404 (http://ruby.taobao.org/specs.4.8.gz)
 
-访问http://ruby.taobao.org，公告通知镜像维护站点已迁往Ruby China镜像
+访问<http://ruby.taobao.org>，公告通知镜像维护站点已迁往Ruby China镜像
 
 	#gem sources --add https://gems.ruby-china.org/ --remove https://rubygems.org/
 	[root@172.20.0.3 ~]# gem sources --add http://gems.ruby-china.org/ --remove http://rubygems.org/
@@ -85,4 +85,4 @@ excerpt: Redis几种数据导出导入方式
 
 **[参考文献]**
 
-1. <https://www.jianshu.com/p/8b47d5d16851>
+1. [redis几种数据导出导入方式](https://www.jianshu.com/p/8b47d5d16851 "redis几种数据导出导入方式")
