--- a/_posts/Linux/2019-08-31-34.md
+++ b/_posts/Linux/2019-08-31-34.md
@@ -14,4 +14,4 @@ tar -zcvf 打包后生成的文件名全路径 要打包的目录
 
 **[参考文献]**
 
-1. <https://www.cnblogs.com/Alan-Jones/p/7488179.html>
+1. [Linux下压缩某个文件夹命令](https://www.cnblogs.com/Alan-Jones/p/7488179.html "Linux下压缩某个文件夹命令")
