--- a/_posts/Linux/2019-08-31-35.md
+++ b/_posts/Linux/2019-08-31-35.md
@@ -50,4 +50,4 @@ excerpt: Mongodb导出与导入远程Linux服务器上的数据
 
 **[参考文献]**
 
-1. <https://www.cnblogs.com/theRhyme/p/10900437.html>
+1. [MONGODB导出与导入远程LINUX服务器上的数据](https://www.cnblogs.com/theRhyme/p/10900437.html "MONGODB导出与导入远程LINUX服务器上的数据")
