--- a/_posts/Linux/2019-09-01-37.md
+++ b/_posts/Linux/2019-09-01-37.md
@@ -46,6 +46,6 @@ excerpt: Linux中运行.sql文件的方法
 
 **[参考文献]**
 
-1. <http://blog.sina.com.cn/s/blog_7cecec950102yldn.html>
+1. [Linux中运行.sql文件的方法](http://blog.sina.com.cn/s/blog_7cecec950102yldn.html "Linux中运行.sql文件的方法")
 
 
