--- a/_posts/Linux/2019-09-01-40.md
+++ b/_posts/Linux/2019-09-01-40.md
@@ -14,6 +14,6 @@ excerpt: 卸载指定版本 bundle
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/amcsc/article/details/84596677>
+1. [卸载指定版本 bundle](https://blog.csdn.net/amcsc/article/details/84596677 "卸载指定版本 bundle")
 
 
