--- a/_posts/Linux/2019-09-01-41.md
+++ b/_posts/Linux/2019-09-01-41.md
@@ -26,6 +26,5 @@ excerpt: dropping-database-errno
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/u012349696/article/details/77936997>
-
+1. [ERROR 1010](https://blog.csdn.net/u012349696/article/details/77936997 "ERROR 1010")
 
