--- a/_posts/Linux/2019-09-01-42.md
+++ b/_posts/Linux/2019-09-01-42.md
@@ -58,5 +58,5 @@ excerpt: Linux 编译 apr-util 时报错
 
 **[参考文献]**
 
-1. <https://www.cnblogs.com/mingc/p/7695610.html>
+1. [Linux 编译 apr-util 时报错](https://www.cnblogs.com/mingc/p/7695610.html "Linux 编译 apr-util 时报错")
 
