--- a/_posts/Linux/2019-09-01-43.md
+++ b/_posts/Linux/2019-09-01-43.md
@@ -27,6 +27,6 @@ excerpt: 连接redis错误：ERR Client sent AUTH, but no password is set
 
 **[参考文献]**
 
-1. <https://www.cnblogs.com/robinli/p/9265186.html>
+1. [ERR Client sent AUTH, but no password is set](https://www.cnblogs.com/robinli/p/9265186.html "ERR Client sent AUTH, but no password is set")
 
 
