--- a/_posts/Linux/2019-09-01-44.md
+++ b/_posts/Linux/2019-09-01-44.md
@@ -26,6 +26,6 @@ excerpt: Redis命令
 
 **[参考文献]**
 
-1. <https://www.redis.net.cn/order/3528.html>
+1. [该命令用于在 key 存在是删除 key](https://www.redis.net.cn/order/3528.html "该命令用于在 key 存在是删除 key")
 
 
