--- a/_posts/Linux/2019-09-01-46.md
+++ b/_posts/Linux/2019-09-01-46.md
@@ -20,6 +20,6 @@ excerpt: Vim查找方式
 
 **[参考文献]**
 
-1. <http://www.21ic.com/tougao/article/3956.html>
+1. [在VIM中 查找 “上一个” 的快捷键](https://www.21ic.com/tougao/article/3956.html "在VIM中 查找 “上一个” 的快捷键")
 
 
