--- a/_posts/Linux/2019-09-02-47.md
+++ b/_posts/Linux/2019-09-02-47.md
@@ -117,6 +117,6 @@ PCRE
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/wangshuminjava/article/details/80483397>
+1. [Linux中Apache安装、配置、加为服务](https://blog.csdn.net/wangshuminjava/article/details/80483397 "Linux中Apache安装、配置、加为服务")
 
 
