--- a/_posts/Linux/2019-09-02-48.md
+++ b/_posts/Linux/2019-09-02-48.md
@@ -55,6 +55,6 @@ excerpt: 桥接模式下，实现主机和虚拟机可以互相ping通
 
 **[参考文献]**
 
-1. <https://www.cnblogs.com/single-dont/p/10956953.html>
+1. [桥接模式下，实现主机和虚拟机可以互相ping通](https://www.cnblogs.com/single-dont/p/10956953.html "桥接模式下，实现主机和虚拟机可以互相ping通")
 
 
