--- a/_posts/Linux/2019-09-02-49.md
+++ b/_posts/Linux/2019-09-02-49.md
@@ -35,6 +35,6 @@ excerpt: Slave failed to initialize relay log info structure from the repository
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/lwei_998/article/details/41210945>
+1. [Slave failed to initialize relay log info structure from the repository, Error_code: 1872](https://blog.csdn.net/lwei_998/article/details/41210945 "Slave failed to initialize relay log info structure from the repository, Error_code: 1872")
 
 
