--- a/_posts/Linux/2019-09-02-50.md
+++ b/_posts/Linux/2019-09-02-50.md
@@ -30,6 +30,6 @@ excerpt: 关于VMware虚拟机网络ping不通外网问题
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/tap_into/article/details/79676680>
+1. [关于VMware虚拟机网络ping不通外网问题](https://blog.csdn.net/tap_into/article/details/79676680 "关于VMware虚拟机网络ping不通外网问题")
 
 
