--- a/_posts/Linux/2019-09-07-51.md
+++ b/_posts/Linux/2019-09-07-51.md
@@ -8,7 +8,9 @@ excerpt: FastDFS安装手册
 
 ## 一、准备工作（俩台机器同时进行） ##
 
-### 1下载软件：http://sourceforge.net/projects/fastdfs/files/ ###
+### 1下载软件： ###
+
+<http://sourceforge.net/projects/fastdfs/files/>
 
 ### 2安装gcc。 ###
 
