--- a/_posts/Linux/2019-09-07-52.md
+++ b/_posts/Linux/2019-09-07-52.md
@@ -15,4 +15,4 @@ excerpt: Linux 软连接删除
 
 **[参考文献]**
 
-1. <https://www.cnblogs.com/sign-ptk/p/6207936.html>
+1. [linux下添加链接与删除链接](https://www.cnblogs.com/sign-ptk/p/6207936.html "linux下添加链接与删除链接")
