--- a/_posts/Linux/2019-10-26-61.md
+++ b/_posts/Linux/2019-10-26-61.md
@@ -23,5 +23,4 @@ excerpt:  mysql安装出现error Nr.1045
 
 **[参考文献]**
 
-1. <https://jingyan.baidu.com/article/e52e36157a97c740c60c51f7.html>
-
+1. [mysql安装出现error Nr.1045](https://jingyan.baidu.com/article/e52e36157a97c740c60c51f7.html "mysql安装出现error Nr.1045")
