--- a/_posts/Linux/2019-10-26-63.md
+++ b/_posts/Linux/2019-10-26-63.md
@@ -25,5 +25,5 @@ excerpt:  安装MySQL最后一步出现错误Error Nr.1045解决方法
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/gsls200808/article/details/46846019>
+1. [安装MySQL最后一步出现错误Error Nr.1045解决方法](https://blog.csdn.net/gsls200808/article/details/46846019 "安装MySQL最后一步出现错误Error Nr.1045解决方法")
 
