--- a/_posts/Linux/2019-10-26-66.md
+++ b/_posts/Linux/2019-10-26-66.md
@@ -96,7 +96,7 @@ excerpt:  启用Windows10的Linux子系统
 
 **[参考文献]**
 
-1. <https://www.linuxidc.com/Linux/2019-05/158676.htm>
-2. <https://www.jianshu.com/p/dc32a75e2de4?utm_source=oschina-app>
-3. <https://blog.csdn.net/lu900618/article/details/74955065>
-4. <https://blog.csdn.net/weixin_41884010/article/details/97898108>
+1. [启用Windows10的Linux子系统并安装图形界面](https://www.linuxidc.com/Linux/2019-05/158676.htm "启用Windows10的Linux子系统并安装图形界面")
+2. [史上最全win10下Linux子系统的安装及优化方案](https://www.jianshu.com/p/dc32a75e2de4?utm_source=oschina-app "史上最全win10下Linux子系统的安装及优化方案")
+3. [Win10中内置Linux更换阿里源](https://blog.csdn.net/lu900618/article/details/74955065 "Win10中内置Linux更换阿里源")
+4. [Windows10子系统Ubuntu18.04LTS更换国内源](https://blog.csdn.net/weixin_41884010/article/details/97898108 "Windows10子系统Ubuntu18.04LTS更换国内源")
