--- a/_posts/Linux/2019-10-26-68.md
+++ b/_posts/Linux/2019-10-26-68.md
@@ -25,6 +25,6 @@ excerpt:  Xshell连接win10 Linux子系统
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/u011786352/article/details/89471848>
+1. [Xshell连接win10 Linux子系统](https://blog.csdn.net/u011786352/article/details/89471848 "Xshell连接win10 Linux子系统")
 
 
