--- a/_posts/C/C/2019-10-26-8.md
+++ b/_posts/C/C/2019-10-26-8.md
@@ -27,4 +27,4 @@ excerpt:  安装DirectX SDK时出现Error Code；s1023 的解决方案
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/ts1030746080/article/details/8681550>
+1. [安装DirectX SDK时出现Error Code:s1023 的解决方案](https://blog.csdn.net/ts1030746080/article/details/8681550 "安装DirectX SDK时出现Error Code:s1023 的解决方案")
