--- a/_posts/C/C/2019-10-26-9.md
+++ b/_posts/C/C/2019-10-26-9.md
@@ -12,6 +12,6 @@ excerpt:  Visual Studio 2017安装时共享组件、工具和 SDK安装位置不
 
 **[参考文献]**
 
-1. <https://blog.csdn.net/caoxuqiang/article/details/82821692>
+1. [Visual Studio 2017安装时共享组件、工具和 SDK安装位置不能更改的问题](https://blog.csdn.net/caoxuqiang/article/details/82821692 "Visual Studio 2017安装时共享组件、工具和 SDK安装位置不能更改的问题")
 
 
