--- a/_posts/Linux/2019-08-09-8.md
+++ b/_posts/Linux/2019-08-09-8.md
@@ -31,4 +31,4 @@ excerpt: nodejs的安装
 
 **[参考文献]**
 
-1. <https://www.cnblogs.com/mao2080/p/9346018.html>
+1. [Linux系统安装Nodejs](https://www.cnblogs.com/mao2080/p/9346018.html "Linux系统安装Nodejs")
