--- a/_posts/Linux/2019-10-26-64.md
+++ b/_posts/Linux/2019-10-26-64.md
@@ -8,7 +8,7 @@ excerpt:  在PC上安装Android系统的图文教程
 
 ## 安装前准备工作： ##
 
-### 1.移步https://www.jb51.net/softs/155090.html下载Android系统镜像，也可以自行google。 ###
+### 1.移步<https://www.jb51.net/softs/155090.html>下载Android系统镜像，也可以自行google。 ###
 
 ### 2.用软碟通（Ultraiso）把下载好的镜像刻到U盘。 ###
 
@@ -116,4 +116,4 @@ excerpt:  在PC上安装Android系统的图文教程
 
 **[参考文献]**
 
-1. <https://www.jb51.net/os/155101.html>
+1. [https://www.jb51.net/os/155101.html](https://www.jb51.net/os/155101.html "在PC上安装Android系统的图文教程")
