更新一下文档错误。

--- a/_posts/Android/Exception/2020-02-09-19.md
+++ b/_posts/Android/Exception/2020-02-09-19.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  Android Studio中 Error java 无效的标记：-XX：MaxPermsize=512M
-category: Other
-tags: [Other]
+category: Exception
+tags: [Exception]
 excerpt:  Android Studio中 Error java 无效的标记：-XX：MaxPermsize=512M
 ---
 
