--- a/_posts/Android/Exception/2020-03-13-20.md
+++ b/_posts/Android/Exception/2020-03-13-20.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  Invoke-customs are only supported starting with Android O
-category: Other
-tags: [Other]
+category: Exception
+tags: [Exception]
 excerpt:  Invoke-customs are only supported starting with Android O
 ---
 
