--- a/_posts/Android/Exception/2020-07-11-26.md
+++ b/_posts/Android/Exception/2020-07-11-26.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  JNI开发常见错误
-category: Other
-tags: [Other]
+category: Exception
+tags: [Exception]
 excerpt:  JNI开发常见错误
 ---
 
