--- a/_posts/Java/MySql/2020-02-08-12.md
+++ b/_posts/Java/MySql/2020-02-08-12.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:   The given object has a null identifier解决办法 
-category: Java
-tags: [Java]
+category: MySql
+tags: [MySql]
 excerpt:  The given object has a null identifier解决办法
 ---
 
