--- a/_posts/Web/Vue/2020-02-09-3.md
+++ b/_posts/Web/Vue/2020-02-09-3.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:   用vscode实现vue.js项目的一个完整过程 
-category: Html
-tags: [Html]
+category: Vue
+tags: [Vue]
 excerpt:  用vscode实现vue.js项目的一个完整过程
 ---
 
