--- a/_posts/Android/Exception/2020-02-05-12.md
+++ b/_posts/Android/Exception/2020-02-05-12.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Android 9.0 安装包解析错误
-category: Other
-tags: [Other]
+category: Exception
+tags: [Exception]
 excerpt: Android 9.0 安装包解析错误
 ---
 
