--- a/_posts/Android/Exception/2020-02-09-17.md
+++ b/_posts/Android/Exception/2020-02-09-17.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  Android 删除aar包中的jar包解决Duplicate class包冲突问题
-category: Other
-tags: [Other]
+category: Exception
+tags: [Exception]
 excerpt:  Android 删除aar包中的jar包解决Duplicate class包冲突问题
 ---
 	
