--- a/_posts/Android/Exception/2020-02-09-18.md
+++ b/_posts/Android/Exception/2020-02-09-18.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:  xx.apk exposed beyond app through Intent.getData()
-category: Other
-tags: [Other]
+category: Exception
+tags: [Exception]
 excerpt:  xx.apk exposed beyond app through Intent.getData()
 ---
 	
