--- a/_posts/Web/Vue/2020-02-09-2.md
+++ b/_posts/Web/Vue/2020-02-09-2.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:   “无法将“vue”项识别为cmdlet、函数、脚本文件或可运行程序的名称”或“vue不是内部或外部命令”的解决方法 
-category: Html
-tags: [Html]
+category: Vue
+tags: [Vue]
 excerpt:  “无法将“vue”项识别为cmdlet、函数、脚本文件或可运行程序的名称”或“vue不是内部或外部命令”的解决方法 
 ---
 
