--- a/_posts/Web/Vue/2020-02-09-4.md
+++ b/_posts/Web/Vue/2020-02-09-4.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title:   “vue-cli-service”不是内部或外部命令，也不是可运行的程序或批处理文件。 
-category: Html
-tags: [Html]
+category: Vue
+tags: [Vue]
 excerpt: “vue-cli-service”不是内部或外部命令，也不是可运行的程序或批处理文件。
 ---
 
