--- a/_posts/Java/SpringBoot/2020-02-09-6.md
+++ b/_posts/Java/SpringBoot/2020-02-09-6.md
@@ -16,10 +16,72 @@ excerpt:  使用SpringBoot简单快速的访问静态资源
 
 还需要在“resources”目录下(注意只能在“resources”目录下创建文件，因为SpringBoot只在它下面扫描)，再创建一个文件夹名为“static”的文件夹，这里面存放的就是你的图片(如果你想更清晰点，你就在static的下面在创建文件夹)
 
+### SpringBoot 项目启动后，在控制台有一个WARN ###
+
+WARN 14516 --- [main] ion$DefaultTemplateResolverConfiguration : Cannot find template location: classpath:/templates/ (please add some templates or check your Thymeleaf configuration)
+
+原因：
+
+　　templates 文件夹下没有html，jsp或者ftl文件
+
+解决方案：
+
+　　（1）在/src/main/resources/templates 目录下添加
+
+　　　　模板文件（后缀为html，.jsp 或 .ftl 的文件）
+
+　　（2）在配置文件 application.properties 中添加
+
+	spring.thymeleaf.check-template-location=false
+
+配置html
+
+在application.properties文件里配置加html配置
+
+	# 定位模板的目录
+	spring.mvc.view.prefix=/
+	# 给返回的页面添加后缀名
+	spring.mvc.view.suffix=.html
+
+	package com.example.demo.web;
+	 
+	import org.springframework.stereotype.Controller;
+	import org.springframework.web.bind.annotation.RequestMapping;
+	 
+	@Controller
+	public class TestController {
+	    @RequestMapping("test")
+	    public String test(){
+	        return "test";
+	    }
+	}
+
+配置jsp
+
+	<dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+
+在application.properties文件里配置加jsp配置
+
+	# 定位模板的目录
+	#spring.mvc.view.prefix=classpath:/templates/
+	# 给返回的页面添加后缀名
+	#spring.mvc.view.suffix=.html
+	spring.mvc.view.prefix=/WEB-INF/jsp/
+	spring.mvc.view.suffix=.jsp
 
 **[参考文献]**
 
 1. [简单快速的用SpringBoot访问静态资源（图片、html）](https://blog.csdn.net/qq_36481052/article/details/79075214 "简单快速的用SpringBoot访问静态资源（图片、html")
+2. [Cannot find template location: classpath:/templates/](https://www.cnblogs.com/baby123/p/11577803.html "Cannot find template location: classpath:/templates/")
+3. [SpringBoot访问静态资源html和jsp](https://blog.csdn.net/linsa_pursuer/article/details/84304924 "SpringBoot访问静态资源html和jsp")
 
 
 
