--- a/_posts/Java/Java/2020-08-15-96.md
+++ b/_posts/Java/Java/2020-08-15-96.md
@@ -32,7 +32,7 @@ Platform Settings的SDKs版本设置
 
 ![](https://img-blog.csdnimg.cn/20190828102650543.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L1JpY2t5X01vbmFyY2g=,size_16,color_FFFFFF,t_70)
 
-5.配置tomcat，运行项目
+### 5.配置tomcat，运行项目 ###
 
 Run–>Edit Configurations–>+tomcat
 
